# rag-poc-v2

./: .gitignore  PLAN.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  settings.py  streaming.py
backend/app/api/: chat.py  documents.py  evals.py  ingest.py  upload.py
backend/app/evals/: datasets.py  online.py  ragas_runner.py
backend/app/ingestion/: chunker.py  loaders.py  pipeline.py
backend/app/rag/: graph.py  nodes.py  prompts.py  retrievers.py  routing.py  schemas.py
backend/app/stores/: base.py  chroma_store.py  factory.py  pgvector_store.py
backend/tests/: test_chunker.py  test_graph.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  EvalPanel.tsx  GraphDiagram.tsx  KnowledgeBasePanel.tsx  PipelinePanel.tsx  TechniqueToggles.tsx
frontend/lib/: sseClient.ts  types.ts
infra/: docker-compose.yml
infra/supabase/migrations/: 0001_init_pgvector.sql
knowledge-base/: 01-what-is-rag.md  02-embeddings.md  03-vector-databases.md  04-chunking-strategies.md  05-llms-and-prompt-construction.md
